src/snapshots/wretch_lang__parser__tests__simple_module.snap
---
source: src/parser.rs
expression: "format!(\"{:#?}\\n\\n{:#?}\", errs, ast)"
---
[]

Some(
    Ast(
        P(
            "A",
            Span(
                FileId(
                    0,
                ),
                5,
                6,
            ),
        ),
        [
            DefExpr(
                None,
                Span(
                    FileId(
                        0,
                    ),
                    8,
                    11,
                ),
                N(
                    "x",
                    Span(
                        FileId(
                            0,
                        ),
                        12,
                        13,
                    ),
                ),
                Chain(
                    [
                        Int(
                            "1",
                            Span(
                                FileId(
                                    0,
                                ),
                                16,
                                17,
                            ),
                        ),
                        Ident(
                            N(
                                "+",
                                Span(
                                    FileId(
                                        0,
                                    ),
                                    18,
                                    19,
                                ),
                            ),
                        ),
                    ],
                ),
            ),
            DefExpr(
                Some(
                    DefTyp(
                        Span(
                            FileId(
                                0,
                            ),
                            21,
                            24,
                        ),
                        [
                            Known(
                                P(
                                    "Int",
                                    Span(
                                        FileId(
                                            0,
                                        ),
                                        27,
                                        30,
                                    ),
                                ),
                            ),
                        ],
                        Span(
                            FileId(
                                0,
                            ),
                            31,
                            33,
                        ),
                        [
                            Known(
                                P(
                                    "Int",
                                    Span(
                                        FileId(
                                            0,
                                        ),
                                        34,
                                        37,
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
                Span(
                    FileId(
                        0,
                    ),
                    38,
                    41,
                ),
                N(
                    "y",
                    Span(
                        FileId(
                            0,
                        ),
                        42,
                        43,
                    ),
                ),
                Chain(
                    [
                        Int(
                            "1",
                            Span(
                                FileId(
                                    0,
                                ),
                                46,
                                47,
                            ),
                        ),
                        Ident(
                            N(
                                "+",
                                Span(
                                    FileId(
                                        0,
                                    ),
                                    48,
                                    49,
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ],
    ),
)
